# rl-navigation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements2.txt  requirements3.txt
gym_envs/: setup.cfg  setup.py
gym_envs/gym_envs/: __init__.py
gym_envs/gym_envs/robot_envs/: __init__.py
gym_envs/gym_envs/robot_envs/turtlebot3/: __init__.py  turtlebot3_env.py
gym_envs/gym_envs/task_envs/: __init__.py  task_commons.py
gym_envs/gym_envs/task_envs/turtlebot3/navigation/: turtlebot3_navigation.py
gym_envs/gym_envs/task_envs/turtlebot3/navigation/config/: turtlebot3_navigation.yaml
launch/: main.launch
miniproject/: CMakeLists.txt  package.xml  setup.cfg  setup.py
miniproject/config/: tb3_openai_qlearn_params.yaml
miniproject/launch/: empty_box.launch  small.launch  start_training.launch
miniproject/miniproject/: __init__.py
miniproject/miniproject/config/: cylinders_world.yaml
miniproject/miniproject/launch/: cylinders_world.launch  cylinders_world.launch.py  start_qlearning.launch.py  start_training.launch
miniproject/miniproject/models/box_walls/: model.sdf
miniproject/miniproject/models/cylinder/: model.sdf
miniproject/miniproject/scripts/: start_qlearning.py
miniproject/miniproject/worlds/: cylinders_world.model  cylinders_world.world  empty_box.world  random_cylinders.world  random_cylinders_2.world
miniproject/models/box_walls/: model.config  model.sdf
miniproject/models/cylinder/: model.config
miniproject/scripts/: start_qlearning.py
miniproject/training_results/: openaigym.episode_batch.0.11452.stats.json  openaigym.manifest.0.11452.manifest.json
miniproject/worlds/: random_cylinders.world  small.world
models/cylinder/: model.sdf
models/random_cylinders/: model.config  model.sdf
tb3_openai_example/: CMakeLists.txt  package.xml
tb3_openai_example/config/: tb3_openai_qlearn_params.yaml
tb3_openai_example/gym_envs/task_envs/: __init__.py
tb3_openai_example/gym_envs/task_envs/turtlebot3/: __init__.py
tb3_openai_example/gym_envs/task_envs/turtlebot3/navigation/: __init__.py  turtlebot3_navigation.py
tb3_openai_example/gym_envs/task_envs/turtlebot3/navigation/config/: turtlebot3_navigation.yaml
tb3_openai_example/launch/: start_training.launch
tb3_openai_example/scripts/: start_qlearning.py
tb3_openai_example/task_envs/: myturtlebot3_world.py
tb3_openai_example/training_results/: openaigym.episode_batch.0.7877.stats.json  openaigym.manifest.0.7877.manifest.json
worlds/: random_cylinders.world
