<?xml version="1.0"?>
<package format="2">
  <name>miniproject</name>
  <version>0.0.1</version>
  <description>The miniproject package</description>
  <maintainer email="nk569@cam.ac.uk">Nicholas Kastanos</maintainer>
  <license>None</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openai_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>openai_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>openai_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
