<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>miniproject</name>
  <version>0.0.4</version>
  <description>The miniproject package</description>
  <author email="nk569@cam.ac.uk">Nicholas Kastanos</author>
  <maintainer email="nk569@cam.ac.uk">Nicholas Kastanos</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <!-- <depend>tf_conversions</depend> -->
  <depend>gazebo_ros</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>gazebo_plugins</depend>
  <!-- <depend>message_runtime</depend> -->
  <depend>rosidl_default_runtime</depend>
  <!-- <depend>joy</depend> -->
  <!-- <depend>teleop_twist_joy</depend> -->
  <!-- <depend>teleop_twist_keyboard</depend> -->
  <depend>laser_proc</depend>
  <!-- <depend>rgbd_launch</depend> -->
  <!-- <depend>depthimage_to_laserscan</depend> -->
  <!-- <depend>rosserial_arduino</depend> -->
  <!-- <depend>rosserial_python</depend> -->
  <!-- <depend>rosserial_server</depend> -->
  <!-- <depend>rosserial_client</depend> -->
  <!-- <depend>rosserial_msgs</depend> -->
  <!-- <depend>amcl</depend> -->
  <!-- <depend>map_server</depend> -->
  <!-- <depend>move_base</depend> -->
  <depend>urdf</depend>
  <depend>xacro</depend>
  <!-- <depend>compressed_image_transport</depend> -->
  <!-- <depend>image_view</depend> -->
  <!-- <depend>gmapping</depend> -->
  <!-- <depend>navigation</depend> -->
  <!-- <depend>interactive_markers</depend> -->
  <depend>turtlebot3</depend>
  <depend>turtlebot3_msgs</depend>
  <!-- <depend>turtlebot3_simulations</depend> -->

  <build_depend>openai_ros2</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>openai_ros2</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>openai_ros2</exec_depend>
  <exec_depend>openai_ros2_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <build_type>ament_python</build_type>
  </export>
</package>
