<?xml version="1.0"?>
<package format="2">
  <name>tb3_openai_example</name>
  <version>0.0.0</version>
  <description>The tb3_openai_example package</description>

  <maintainer email="nk569@cam.ac.uk">Nicholas Kastanos</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>None</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/tb3_openai_example</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="nk569@cam.ac.uk">Nicholas Kastanos</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openai_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>openai_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>openai_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf_conversions</depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
